Fixing Utility Functions

--- a/Final_Results/Optuna_Cleaning.ipynb
+++ b/Final_Results/Optuna_Cleaning.ipynb
@@ -20,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')  # Adds the parent directory to the path so Python can find the `Cleaning_and_Evaluation` package\n",
+    "from Cleaning_and_Evaluation import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
@@ -29,7 +32,6 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_validate\n",
     "import seaborn as sns\n",
-    "from Spectra_Preparation_Functions import *\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
     "from sklearn.metrics import classification_report"
@@ -301,7 +303,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19064/250951349.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9450/250951349.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -351,7 +353,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19064/2601916869.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9450/2601916869.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -373,7 +375,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19064/2601916869.py:9: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9450/2601916869.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -431,7 +433,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19064/3447061085.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9450/3447061085.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -703,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1010,7 @@
        "[63 rows x 3 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
