--- a/Final_Results/Optuna_Cleaning_And_PageRank.ipynb
+++ b/Final_Results/Optuna_Cleaning_And_PageRank.ipynb
@@ -16,10 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')  # Adds the parent directory to the path so Python can find the `Cleaning_and_Evaluation` package\n",
+    "from Cleaning_and_Evaluation import *\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
@@ -29,7 +32,6 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_validate\n",
     "import seaborn as sns\n",
-    "from Spectra_Preparation_Functions import *\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
     "from sklearn.metrics import classification_report"
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +234,7 @@
        "[6239205 rows x 7 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +291,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -319,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14049/250951349.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9925/250951349.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -340,7 +342,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -369,14 +371,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14049/2601916869.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9925/2601916869.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -398,7 +400,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14049/2601916869.py:9: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9925/2601916869.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -412,7 +414,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Baseline_Corrected_Absorbance'>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -449,14 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14049/3447061085.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_9925/3447061085.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -470,7 +472,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Scaled_Absorbance'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +731,7 @@
        "[6239205 rows x 8 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +763,7 @@
        "       '210526-1', '210526-2', '210526-3'], dtype=object)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +783,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -803,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +824,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -843,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +854,7 @@
        "<Axes: xlabel='WaveNumber', ylabel='Absorbance'>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -880,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +900,7 @@
        "3"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +924,7 @@
        "Name: SpecID, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +948,7 @@
        "Name: SurID, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1264,7 @@
        "[63 rows x 3 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
