Changing file paths

--- a/Baseline_Approach/AutoML.ipynb
+++ b/Baseline_Approach/AutoML.ipynb
@@ -33,12 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/scaled_and_noise_removal.csv\")\n",
-    "#pivoted_df = pd.read_csv(\"../../data/Unscaled_Baseline_Correction.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/scaled_and_noise_removal.csv\")\n",
+    "#pivoted_df = pd.read_csv(\"../data/Unscaled_Baseline_Correction.csv\")\n",
     "#pivoted_df = pd.read_csv(\"../../data/Scaled_Baseline_Correction.csv\")\n",
-    "df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")\n",
-    "#df = pd.read_csv(\"../../data/scaling_test.csv\")"
+    "df = pd.read_csv(\"../data/current_clean_spectrum.csv\")\n",
+    "#df = pd.read_csv(\"../data/scaling_test.csv\")"
    ]
   },
   {
@@ -47,8 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fastRP_df = pd.read_csv(\"../../data/fastRP_embeddings.csv\")\n",
-    "# statuses_df = pd.read_csv(\"../../data/SpecIDs_and_Status.csv\")\n",
+    "# fastRP_df = pd.read_csv(\"../data/fastRP_embeddings.csv\")\n",
+    "# statuses_df = pd.read_csv(\"../data/SpecIDs_and_Status.csv\")\n",
     "# pivoted_df = fastRP_df.merge(statuses_df, on=\"SpecID\").sort_values(by=\"SpecID\").set_index('SpecID')"
    ]
   },
