--- a/Baseline_Approach/Cleaning_Visualisation.ipynb
+++ b/Baseline_Approach/Cleaning_Visualisation.ipynb
@@ -44,8 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
