--- a/Baseline_Approach/Manual_Cleaning.ipynb
+++ b/Baseline_Approach/Manual_Cleaning.ipynb
@@ -43,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
@@ -493,9 +493,6 @@
     "window_size = 21\n",
     "poly_order = 3\n",
     "\n",
-    "# Load your DataFrame 'df' here\n",
-    "# df = pd.read_csv('your_data.csv')\n",
-    "\n",
     "# Selecting the sample from the dataframe based on 'SpecID'\n",
     "sample = df[df['SpecID'] == \"201210-1-01\"]\n",
     "\n",
@@ -516,7 +513,7 @@
     "sns.lineplot(x=\"WaveNumber\", y=\"Baseline_Corrected_Absorbance\", data=sample, ax=axes[1])\n",
     "\n",
     "# Display the plots\n",
-    "plt.tight_layout()  # Adjust the layout to make sure there's no overlap\n",
+    "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   },
