--- a/Baseline_Approach/Quick_Spectra_Cleaning.ipynb
+++ b/Baseline_Approach/Quick_Spectra_Cleaning.ipynb
@@ -43,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "# df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "# df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "# df = df[(df['WaveNumber'] >= 400) & (df['WaveNumber'] <= 1800)]\n",
-    "# df.to_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\", index=False)"
+    "# df.to_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\", index=False)"
    ]
   },
   {
@@ -1049,12 +1049,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv(\"../../data/standard_cleaning.csv\", index=False)\n",
-    "# df.to_csv(\"../../data/kfold_parameters.csv\", index=False)\n",
-    "#df.to_csv(\"../../data/initial_parameters.csv\", index=False)\n",
-    "#df.to_csv(\"../../data/groupkfold_parameters.csv\", index=False)\n",
-    "#df.to_csv(\"../../data/current_clean_spectrum.csv\", index=False)\n",
-    "# df.to_csv(\"../../data/400-1800_spike_removed.csv\", index=False)"
+    "# df.to_csv(\"../data/standard_cleaning.csv\", index=False)\n",
+    "# df.to_csv(\"../data/kfold_parameters.csv\", index=False)\n",
+    "#df.to_csv(\"../data/initial_parameters.csv\", index=False)\n",
+    "#df.to_csv(\"../data/groupkfold_parameters.csv\", index=False)\n",
+    "#df.to_csv(\"../data/current_clean_spectrum.csv\", index=False)\n",
+    "# df.to_csv(\"../data/400-1800_spike_removed.csv\", index=False)"
    ]
   }
  ],
