--- a/Baseline_Approach/Spectra_Visualisations.ipynb
+++ b/Baseline_Approach/Spectra_Visualisations.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra_df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")"
+    "spectra_df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")"
    ]
   },
   {
