--- a/Feature_Selection/Dimensionality_Reduction_Test.ipynb
+++ b/Feature_Selection/Dimensionality_Reduction_Test.ipynb
@@ -31,11 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_380-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")\n",
-    "df = pd.read_csv(\"../../data/standard_cleaning.csv\")\n"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_380-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/current_clean_spectrum.csv\")\n",
+    "df = pd.read_csv(\"../data/standard_cleaning.csv\")\n"
    ]
   },
   {
