--- a/Feature_Selection/Sequential_Feature_Selection_With_Tuned_Pagerank_Model.ipynb
+++ b/Feature_Selection/Sequential_Feature_Selection_With_Tuned_Pagerank_Model.ipynb
@@ -29,16 +29,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.signal import savgol_filter\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import cross_validate, GroupKFold, cross_val_score\n",
     "from Spectra_Preparation_Functions import *\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "import optuna\n",
-    "#from sklearn.feature_selection import SequentialFeatureSelector\n",
     "from mlxtend.feature_selection import SequentialFeatureSelector\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -56,9 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "# df = pd.read_csv(\"../../data/raw_df_outliers_removed.csv\")\n",
-    "df = pd.read_csv(\"../../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "# df = pd.read_csv(\"../data/raw_df_outliers_removed.csv\")\n",
+    "df = pd.read_csv(\"../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
    ]
   },
   {
@@ -1726,7 +1721,7 @@
     "rf = RandomForestClassifier(random_state=1234, criterion='entropy', max_depth=None, n_estimators=189, min_samples_split=3)\n",
     "\n",
     "# Using GroupKFold for classification tasks\n",
-    "cv = GroupKFold(n_splits=5)\n",
+    "cv = GroupKFold(n_splits=10)\n",
     "\n",
     "# Feature selector\n",
     "sfs = SequentialFeatureSelector(rf,\n",
@@ -2432,7 +2427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_features_df.to_csv(\"../../data/outlier_removed_search.csv\")"
+    "selected_features_df.to_csv(\"../data/outlier_removed_search.csv\")"
    ]
   },
   {
