--- a/Baseline_Approach/Feature_Importance_all_wavenumbers.ipynb
+++ b/Baseline_Approach/Feature_Importance_all_wavenumbers.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/full_spectrum_cleaning.csv\")"
+    "df = pd.read_csv(\"../data/full_spectrum_cleaning.csv\")"
    ]
   },
   {
