--- a/Baseline_Approach/Peak_Feature_Engineering.ipynb
+++ b/Baseline_Approach/Peak_Feature_Engineering.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")"
    ]
   },
   {
@@ -679,15 +679,6 @@
    "outputs": [],
    "source": [
     "spectra_df = spectra_df.rename(columns={'Scaled_Absorbance':'Absorbance'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spectra_df.to_csv(\"../../data/scaled_and_noise_removal.csv\")"
    ]
   },
   {
