--- a/Baseline_Approach/plot_spectra_show_outliers.ipynb
+++ b/Baseline_Approach/plot_spectra_show_outliers.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra_df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")"
+    "spectra_df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")"
    ]
   },
   {
