--- a/Feature_Selection/Automatic_Feature_Selection_tests.ipynb
+++ b/Feature_Selection/Automatic_Feature_Selection_tests.ipynb
@@ -16,7 +16,6 @@
     "import pandas as pd\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, precision_score, recall_score, f1_score\n",
     "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_val_score\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -35,11 +34,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_380-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")\n",
-    "df = pd.read_csv(\"../../data/standard_cleaning.csv\")\n"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_380-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/current_clean_spectrum.csv\")\n",
+    "df = pd.read_csv(\"../data/standard_cleaning.csv\")\n"
    ]
   },
   {
