--- a/Feature_Selection/Fischer_Feature_Selection.ipynb
+++ b/Feature_Selection/Fischer_Feature_Selection.ipynb
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_380-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_380-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "df = pd.read_csv(\"../data/current_clean_spectrum.csv\")"
    ]
   },
   {
