--- a/Feature_Selection/PCA_et.ipynb
+++ b/Feature_Selection/PCA_et.ipynb
@@ -15,11 +15,8 @@
    "source": [
     "import pandas as pd\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, precision_score, recall_score, f1_score\n",
     "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_val_score\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.pipeline import Pipeline"
    ]
@@ -30,10 +27,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_380-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_380-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "df = pd.read_csv(\"../data/current_clean_spectrum.csv\")"
    ]
   },
   {
