--- a/Feature_Selection/Recursive_Feature_Elimination.ipynb
+++ b/Feature_Selection/Recursive_Feature_Elimination.ipynb
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_380-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_380-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "df = pd.read_csv(\"../data/current_clean_spectrum.csv\")"
    ]
   },
   {
@@ -1350,7 +1350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_features_df.to_csv(\"../../data/et_rfecv.csv\")"
+    "selected_features_df.to_csv(\"../data/et_rfecv.csv\")"
    ]
   },
   {
