--- a/Final_Results/graph_1_4_Peaks_GridSlot_SameSample.ipynb
+++ b/Final_Results/graph_1_4_Peaks_GridSlot_SameSample.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")"
    ]
   },
   {
@@ -68,9 +68,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")\n",
-    "#df = pd.read_csv(\"../../data/initial_parameters.csv\")\n",
-    "df = pd.read_csv(\"../../data/groupkfold_parameters.csv\")"
+    "#df = pd.read_csv(\"../data/current_clean_spectrum.csv\")\n",
+    "#df = pd.read_csv(\"../data/initial_parameters.csv\")\n",
+    "df = pd.read_csv(\"../data/groupkfold_parameters.csv\")"
    ]
   },
   {
