More repo organisation

--- a/Final_Results/Best_Accuracy_Feature_Selection - Outliers Removed.ipynb
+++ b/Final_Results/Best_Accuracy_Feature_Selection - Outliers Removed.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
+    "df = pd.read_csv(\"../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
    ]
   },
   {
@@ -2422,7 +2422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_features_df.to_csv(\"../../data/best_accuracy_features_selection.csv\")"
+    "selected_features_df.to_csv(\"../data/best_accuracy_features_selection.csv\")"
    ]
   },
   {
