--- a/Final_Results/Optuna_Cleaning F1.ipynb
+++ b/Final_Results/Optuna_Cleaning F1.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
    ]
   },
   {
