--- a/Final_Results/Optuna_Cleaning_And_PageRank_And_Feature_Selection_F1.ipynb
+++ b/Final_Results/Optuna_Cleaning_And_PageRank_And_Feature_Selection_F1.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
+    "df = pd.read_csv(\"../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
    ]
   },
   {
@@ -1205,7 +1205,7 @@
     }
    ],
    "source": [
-    "selected_features_df = pd.read_csv(\"../../data/best_f1_features_selection.csv\")\n",
+    "selected_features_df = pd.read_csv(\"../data/best_f1_features_selection.csv\")\n",
     "selected_features_df"
    ]
   },
