--- a/Final_Results/PageRank_Filter.ipynb
+++ b/Final_Results/PageRank_Filter.ipynb
@@ -93,10 +93,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")\n",
-    "#df = pd.read_csv(\"../../data/initial_parameters.csv\")\n",
-    "#df = pd.read_csv(\"../../data/groupkfold_parameters.csv\")\n",
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "#df = pd.read_csv(\"../data/current_clean_spectrum.csv\")\n",
+    "#df = pd.read_csv(\"../data/initial_parameters.csv\")\n",
+    "#df = pd.read_csv(\"../data/groupkfold_parameters.csv\")\n",
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
@@ -641,7 +641,7 @@
    ],
    "source": [
     "status_df = df.groupby('SpecID')[['SurID', 'Status']].first()\n",
-    "# surface_and_status.to_csv(\"../../data/surface_and_status.csv\")\n",
+    "# surface_and_status.to_csv(\"../data/surface_and_status.csv\")\n",
     "status_df"
    ]
   },
