--- a/Final_Results/groupkfold_evaluation.ipynb
+++ b/Final_Results/groupkfold_evaluation.ipynb
@@ -28,7 +28,7 @@
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from scipy.signal import find_peaks, peak_prominences, peak_widths, savgol_filter\n",
+    "from scipy.signal import find_peaks, peak_prominences, peak_widths\n",
     "from sklearn.model_selection import cross_validate, GroupKFold"
    ]
   },
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
