--- a/Final_Results/kfold_evaluation.ipynb
+++ b/Final_Results/kfold_evaluation.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
