--- a/Neural Networks/Groups_CNN_test.ipynb
+++ b/Neural Networks/Groups_CNN_test.ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#spectra_df = pd.read_csv(\"../../data/scaled_and_noise_removal.csv\", index_col=0)\n",
-    "spectra_df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "#spectra_df = pd.read_csv(\"../data/scaled_and_noise_removal.csv\", index_col=0)\n",
+    "spectra_df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
