--- a/Final_Results/Optuna_Cleaning_And_PageRank_And_Feature_Selection.ipynb
+++ b/Final_Results/Optuna_Cleaning_And_PageRank_And_Feature_Selection.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
+    "df = pd.read_csv(\"../data/400-1800_with_raw_scaled_surface_pagerank.csv\")"
    ]
   },
   {
