More path fixing

--- a/Parameter_Searches/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
+++ b/Parameter_Searches/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
@@ -59,9 +59,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/400-1800_spike_removed.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/400-1800_spike_removed.csv\")"
    ]
   },
   {
@@ -831,7 +831,7 @@
     "print(f\"Best Parameters: lam={best_row['lam']}, p={best_row['p']} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Baseline_Corrected_Results.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Baseline_Corrected_Results.csv\", index=False)"
    ]
   },
   {
