--- a/Parameter_Searches/KFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
+++ b/Parameter_Searches/KFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
@@ -37,13 +37,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
-    "from scipy import sparse\n",
-    "from scipy.sparse.linalg import spsolve\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate\n",
-    "from joblib import Parallel, delayed\n"
+    "from joblib import Parallel, delayed"
    ]
   },
   {
@@ -59,8 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
@@ -933,7 +931,7 @@
     "print(f\"Best Parameters: lam={best_row['lam']}, p={best_row['p']} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Baseline_Corrected_Results.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Baseline_Corrected_Results.csv\", index=False)"
    ]
   },
   {
@@ -1001,7 +999,7 @@
     "print(f\"Best Parameters: window_size={best_row['window']}, poly_order={best_row['poly']} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Smoothed_Absorbance_Results.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Smoothed_Absorbance_Results.csv\", index=False)"
    ]
   },
   {
@@ -1112,7 +1110,7 @@
     "print(f\"Best Parameters: lam={best_row['lam']}, p={best_row['p']}, window_size={best_row['window']}, poly_order={best_row['poly']} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Smoothed_Baseline_Results.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Smoothed_Baseline_Results.csv\", index=False)"
    ]
   },
   {
@@ -1182,7 +1180,7 @@
     "print(f\"Best Parameters: lam={best_row['lam']}, p={best_row['p']} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Scaled_Baseline_Corrected_Results.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Scaled_Baseline_Corrected_Results.csv\", index=False)"
    ]
   },
   {
@@ -1253,7 +1251,7 @@
     "print(f\"Best Parameters: window_size={best_row['window']}, poly_order={best_row['poly']} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Scaled_Smoothed_Absorbance_Results.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Scaled_Smoothed_Absorbance_Results.csv\", index=False)"
    ]
   },
   {
@@ -1350,7 +1348,7 @@
     "print(f\"Best Parameters: lam={best_row['lam']}, p={best_row['p']}, window_size={best_row['window']}, poly_order={best_row['poly']} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Scaled_Smoothed_Baseline_Results.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Scaled_Smoothed_Baseline_Results.csv\", index=False)"
    ]
   }
  ],
