--- a/Parameter_Searches/GroupKFold_Peak_Parameter_Tuning.ipynb
+++ b/Parameter_Searches/GroupKFold_Peak_Parameter_Tuning.ipynb
@@ -46,10 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "#df = pd.read_csv(\"../../data/current_clean_spectrum.csv\", index_col=0)\n",
-    "df = pd.read_csv(\"../../data/current_clean_spectrum.csv\")"
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_1.csv\")\n",
+    "#df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "#df = pd.read_csv(\"../data/current_clean_spectrum.csv\", index_col=0)\n",
+    "df = pd.read_csv(\"../data/current_clean_spectrum.csv\")"
    ]
   },
   {
@@ -1537,7 +1537,7 @@
     "print(f\"Best Parameters: Distance={best_row['Distance']}, Prominence={best_row['Prominence']}, Width={best_row['Width']}, Thresholde={best_row['Threshold']} and Avg_Peak_Count={best_row['Average Peak Count']:.2f} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Peak_Stat_Parameters.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Peak_Stat_Parameters.csv\", index=False)"
    ]
   },
   {
@@ -2143,7 +2143,7 @@
     "print(f\"Best Parameters: Distance={best_row['Distance']}, Prominence={best_row['Prominence']}, Width={best_row['Width']}, Thresholde={best_row['Threshold']} and Avg_Peak_Count={best_row['Average Peak Count']:.2f} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Peak_Bin_Parameters.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Peak_Bin_Parameters.csv\", index=False)"
    ]
   },
   {
@@ -2246,7 +2246,7 @@
     "print(f\"Best Parameters: Distance={best_row['Distance']}, Prominence={best_row['Prominence']}, Width={best_row['Width']}, Thresholde={best_row['Threshold']} and Avg_Peak_Count={best_row['Average Peak Count']:.2f} with Accuracy: {best_row['Accuracy']:.4f}\")\n",
     "\n",
     "# Save the results to csv\n",
-    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"Max_Peak_Bin_Parameters.csv\", index=False)"
+    "results_df.sort_values('Accuracy', ascending=False).to_csv(\"../data/Max_Peak_Bin_Parameters.csv\", index=False)"
    ]
   }
  ],
