Created Outlier Removal Folder

--- a/Outlier Removal/Eddie_Gaussian_Kernel._Outlier_Detection_Raw_Scaled.ipynb
+++ b/Outlier Removal/Eddie_Gaussian_Kernel._Outlier_Detection_Raw_Scaled.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")"
+    "df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")"
    ]
   },
   {
@@ -646,7 +646,7 @@
    ],
    "source": [
     "status_df = df.groupby('SpecID')[['SurID', 'Status']].first()\n",
-    "# surface_and_status.to_csv(\"../../data/surface_and_status.csv\")\n",
+    "# surface_and_status.to_csv(\"../data/surface_and_status.csv\")\n",
     "status_df"
    ]
   },
@@ -1908,9 +1908,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "raw_df = pd.read_csv(\"../data/exosomes.raw_spectrum_400-1800.csv\")\n",
     "raw_df = raw_df.merge(pagerank_results, on='SpecID').drop(columns=['SurfacePageRankRank', 'ReverseSurfacePageRankRank'])\n",
-    "raw_df.to_csv(\"../../data/400-1800_with_raw_scaled_surface_pagerank.csv\", index=False)"
+    "raw_df.to_csv(\"../data/400-1800_with_raw_scaled_surface_pagerank.csv\", index=False)"
    ]
   },
   {
