--- a/Baseline_Approach/Cleaning_Experiments.ipynb
+++ b/Baseline_Approach/Cleaning_Experiments.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This aims to classify the exosome staus based on a featureset derrived from the peaks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets test different spectral cleaning parameters"
+    "### **This Notebook Explores how different cleaning apporaches can affect model performance**"
    ]
   },
   {
@@ -61,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter the effective range from 380/400 to 1800 cm-1"
+    "Filter the effective range from 400 to 1800 cm-1"
    ]
   },
   {
@@ -505,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train an Extra Trees Classifier on the full spectrum."
+    "> ##### **Train an Extra Trees Classifier on the full spectrum.**"
    ]
   },
   {
@@ -765,7 +758,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Train an Extra Trees Classifier on the Raw Spectrum and evaluate it with 10-fold cross validation."
+    "Train an Extra Trees Classifier on the Raw Spectrum and evaluate it with 10-fold cross validation."
    ]
   },
   {
@@ -1601,14 +1594,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The PyBaselines Library Performs this much faster."
+    "The [PyBaselines](https://pypi.org/project/pybaselines/) Library Performs this much faster."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is an example on 1 spectrum"
+    "Lets see an example on 1 spectrum"
    ]
   },
   {
@@ -1827,6 +1820,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`lam`** defines the smoothness of the baseline, while **`p`** controls its asymmetry."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -1933,6 +1933,13 @@
    "metadata": {},
    "source": [
     "Remove the noise from the spectra using Savitzky–Golay-filtering on the raw spectrum."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**`window_size`** sets the number of neighbouring points used to create the polynomial, while **`poly_order`** controls the order of the polynomial."
    ]
   },
   {
