--- a/Baseline_Approach/Cleaning_Visualisation.ipynb
+++ b/Baseline_Approach/Cleaning_Visualisation.ipynb
@@ -299,6 +299,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_style('whitegrid')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
