Added a script to create the essential files

--- a/Baseline_Approach/AutoML.ipynb
+++ b/Baseline_Approach/AutoML.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AutoML can be used to quickly compare and tune a variety of models, which is useful when developing the baseline approach."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
