--- a/Baseline_Approach/Feature_Importance_400-1800.ipynb
+++ b/Baseline_Approach/Feature_Importance_400-1800.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **This Notebook Visualises the Regions of the Spectra Seen as Important by the Models**"
+    "#### **This Notebook Visualises Regions of the Spectra, based on how Important they are to the Models**"
    ]
   },
   {
